# parallel_cpp

./: .buildinfo  .gitignore  README.md  cpp_standard_parallelism.html  genindex.html  intro.html  mpi_with_mpl.html  objects.inv  parallel_programming.html  search.html  searchindex.js
.github/workflows/: deploy.yml
_sources/: cpp_standard_parallelism.md  intro.md  mpi_with_mpl.md  parallel_programming.md
docs/: _config.yml  _toc.yml  cpp_standard_parallelism.md  intro.md  mpi_with_mpl.md  parallel_programming.md
scripts/: qr.py
src/: hello_parallel  hello_parallel.cpp  hello_parallel_with_thread_index  hello_parallel_with_thread_index.cpp  matrix_multiplication_parallel  matrix_multiplication_parallel.cpp
src/hello_mpl/: CMakeLists.txt  hello_mpl.cpp
src/matrix_multiplication_mpl/: CMakeLists.txt  matrix_multiplication.cpp
